A few minor corrections

--- a/SnowmassStyle/Computing/E3-executiveSummary.tex
+++ b/SnowmassStyle/Computing/E3-executiveSummary.tex
@@ -16,7 +16,7 @@ light weakly coupled particles, and nucleons, nuclei and atoms.  The
 requirements and resources of quark flavor physics, as in Belle II and LHCb,
 are more similar to those of the energy frontier. The requirements and
 resources of  experiments looking for baryon number violation and  experiments
-searching new light weakly coupled particles are more similar to  those of the
+searching for new light weakly coupled particles are more similar to  those of the
 cosmic frontier.  The Computing Frontier IF report thus focuses on the areas
 of charged lepton processes,  neutrinos, baryon number violation and nucleons,
 nuclei and atoms.
@@ -26,7 +26,7 @@ the experiments are designed to use very intense particle beams to measure
 rare processes. There is a large number of experiments and a range of scales
 in data output and throughput, as well as in the number of experimenters.
 This can potentially lead to fragmentation, reinvention of the wheel, lack of
-access to computing advances and in general more dollars for each type of
+access to computing advances and, in general, more dollars for each type of
 computing and personnel support needed. Furthermore there is significant
 overlap of human resources among experiments, making any significant
 divergence of  software, frameworks and tools between them particularly
@@ -43,11 +43,11 @@ collaboration.
 
 For this report a qualitative survey was conducted of the current and near-
 term future experiments in the IF in order to understand their computing needs
-and also the excepted evolution of these needs.  Computing liaisons and
+and also the expected evolution of these needs.  Computing liaisons and
 representatives for the LBNE, MicroBooNE, MINER$\nu$A, MINOS$+$, Muon $g-2$,
 NO$\nu$A, SEAQUEST,  Daya Bay, IceCube, SNO+, Super-Kamiokande and T2K
 collaborations all responded to the survey. This does not cover all
-experiments in all areas but we consider it a representative survey of the IF
+experiments in all areas, but we consider it a representative survey of the IF
 field.
 
 The responses and conclusions to the survey can be summarized in five aspects:  
@@ -108,7 +108,8 @@ experiment into account when planning for resource needs. Those peaks
 typically are much larger than the planned steady state usage. To meet those
 demands for turnaround during peak usage each experiment should have access to
 run opportunistically on a much larger pool of slots, in addition to its
-dedicated number of slots, to ensures physics results get timely produced.
+dedicated number of slots, to ensures physics results get produced in a timely 
+fashion.
 
 The survey showed that support of the Fermilab based experiments in terms of
 storage and CPU is rated as excellent.  There are still issues, mostly in
@@ -117,7 +118,7 @@ computing professionals are sought.  Professional support is required to
 enable seamless use of resources through Grid job submission, on- or off-site.
 For Fermilab-based experiments, university and other national lab resources
 are used in the production of Monte Carlo files. A common protocol to access
-these resources such as OSG is expected in future.
+these resources such as OSG is expected in the future.
 
 However, non-U.S. experiments with U.S. participation enjoy significantly
 lower levels of support. OSG provides some support of opportunistic use of
