Added corrections requested by Jon Rosner.

--- a/SnowmassStyle/Computing/E2-executiveSummary.tex
+++ b/SnowmassStyle/Computing/E2-executiveSummary.tex
@@ -1,5 +1,4 @@
-
-\section{Computing for Energy Frontier Science}
+\section{Computing for the Energy Frontier}
 
 Computing for experiments at the ``Energy Frontier'' (EF) is now dominated by
 the huge data processing and analysis demands for the Large Hadron Collider
@@ -99,7 +98,7 @@ luminosity and complexity increases dramatically and computing would not be on
 the curve in Figure~\ref{fig:growth}, but would require a significant shift.
 To estimate the resource needs going from the LHC to the HL-LHC the transition
 from the Tevatron to the LHC is instructive.  We observe that in the 10 years
-going from Tevatron in 2003 to LHC at the end of Run1,  the data rates are
+going from Tevatron in 2003 to LHC at the end of Run1, the data rates are
 about a factor of ten larger. However,  during that time the total computing
 capacity went up by a factor of thirty,  and the disk capacity, the local data
 served, the wide area networking from the host lab, and the inter-site
@@ -123,8 +122,8 @@ system, and pose additional programming challenges.  Low power mobile
 platforms are most interesting when they are combined into massively parallel,
 specialized system where a single box may have the same number of cores as a
 remote computing center does today.  These systems would be used more like a
-supercomputer and less like a batch farm, which will require the field to
-grow expertise in such much more interconnected computing environments.
+supercomputer and less like a batch farm, which will require new
+expertise in dealing with these more highly interconnected computers.
 
 Specialized hardware and architectures are likely to be deployed initially in
 extremely well controlled environments, like trigger farms and other dedicated
@@ -148,7 +147,7 @@ interfaces.   Effort is needed to allow the community to make effective use of
 the diverse environments and to perform resource provisioning across
 dedicated, specialized, contributed, opportunistic, and purchased resources.
 
-There are considerable concerns regarding the enormous increase  in data
+There are considerable concerns regarding the enormous increase in data
 produced by the next round of EF colliders,   to be ingested by the offline
 computing systems.  We observe that while the EF processing capacity has
 increased largely with what would be expected from Moore's law and relatively
@@ -167,7 +166,7 @@ reconstruction starting with  the coming running period.   For experiments at
 future EF accelerators there will be strong motivations to reconstruct and
 calibrate online and write only constants.
 
-We expect a change of mentality, moving away from the approach  that a higher
+We expect a change of mentality, moving away from the approach that higher
 trigger rates are always better, and that all data from  all triggered events
 need to be kept.   As the EF trigger rates go up by an order of magnitude,  as
 expected for LHC running, and certainly for the HL-LHC,  the experiments
@@ -175,7 +174,7 @@ should expect to be more selective in what classes of events to fully
 reconstruct,  and instead develop an approach of on-demand reconstruction,
 calibration, and analysis.
 
-Simulation and raw-data reconstruction produce  derived data and that can
+Simulation and raw-data reconstruction produce derived data that can
 entirely be reproduced. At the LHC, already many of the intermediate steps are
 treated as transient data.   More of the data analysis steps should be moved
 into the production chain, only keeping the final output, with the
