--- a/SnowmassStyle/Computing/E3-executiveSummary.tex
+++ b/SnowmassStyle/Computing/E3-executiveSummary.tex
@@ -1,4 +1,4 @@
-\section{Computing for Intensity Frontier Science}
+\section{Computing for the Intensity Frontier}
 
 Computing at the Intensity Frontier (IF) has many significant challenges. The
 experiments, projects and theory all require demanding computing capabilities
@@ -38,7 +38,7 @@ last few years there has been a significant effort by the IF experiments at
 Fermilab to join forces in using a more homogeneous set of software packages,
 frameworks and tools to access infrastructure resources. This trend has
 reduced fragmentation and led to more efficient use of resources. We recommend
-to expand this trend to the broader IF community, adapted to the needs of each
+expansion of this trend to the broader IF community, adapted to the needs of each
 collaboration.
 
 For this report a qualitative survey was conducted of the current and near-
@@ -107,9 +107,9 @@ major conference cycles.  It is important to take the peak demand per
 experiment into account when planning for resource needs. Those peaks
 typically are much larger than the planned steady state usage. To meet those
 demands for turnaround during peak usage each experiment should have access to
-run opportunistically on a much larger pool of slots, in addition to its
-dedicated number of slots, to ensures physics results get produced in a timely 
-fashion.
+additional resources on which it may run opportunistically.
+%%run opportunistically on a much larger pool of slots, in addition to its
+%%dedicated number of slots, to ensures physics results get produced in a timely fashion.
 
 The survey showed that support of the Fermilab based experiments in terms of
 storage and CPU is rated as excellent.  There are still issues, mostly in
@@ -158,7 +158,7 @@ IF experiments making use of that structure.
 
 
 \item Overall computing model and its evolution.  There is a high degree of
-commonality in IF experiment's computing models, despite large differences in
+commonality in IF experiments' computing models, despite large differences in
 the type of data being analyzed, the scale of processing, or the specific
 workflows followed.   The general model is that of a traditional event driven
 analysis and Monte Carlo simulation using centralized data stores that are
