Added line numbers of ease of editing.

--- a/SnowmassStyle/driverFile.tex
+++ b/SnowmassStyle/driverFile.tex
@@ -2,6 +2,7 @@
 \documentclass{tcibook}
 \usepackage{fancyhea}
 \usepackage{work}
+\usepackage{lineno}
 \usepackage{bm}       %    enables bold math symbols  e.g.  \bm{\gamma}
 \usepackage{graphicx}
 \usepackage{hyperref}      % hypertext links %%ARXIV
@@ -18,6 +19,7 @@
 \setcounter{secnumdepth}{3}
 
 \begin{document}
+\linenumbers
 
 \def\bibname{References}
 \bibliographystyle{plain}
