--- a/SnowmassStyle/Computing/bib.tex
+++ b/SnowmassStyle/Computing/bib.tex
@@ -7,6 +7,9 @@
 %%  SPIRES will also supply the CITATION line information; please include it.
 %%
   
+\bibitem{HS06}
+{\tt w3.hepix.org/benchmarks/doku.php/}.
+
 \bibitem{USQCD_IF_whitepaper13}
 T.~Blum {\em et al.} [USQCD Collaboration],
 {\em Lattice QCD at the Intensity Frontier},
